--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build:
       context: .
-    command: ./wait-for-postgres.sh postgres bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: ['./scripts/wait-for-postgres.sh', 'postgis', './scripts/start_app.sh']
     tty: true
     volumes:
       - .:/app
